Few more license fixes.

--- a/README
+++ b/README
@@ -3,5 +3,6 @@ EnimgmaNet is a tiered approach to network functions, built from the socket leve
 EnigmaNet is free software and comes with ABSOLUTELY NO WARRANTY.
 See LICENSE for details.
 
-Copyright (c) IsmAvatar <IsmAvatar@gmail.com>
+Copyright (c) 2010 IsmAvatar <IsmAvatar@gmail.com>
+Copyright (C) 2007 39ster
 
